unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/pse__Revenue_Forecast_Version__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastVersionHelp</customHelpPage>
    <description>Stores the records used in different versions of a revenue forecast.</description>
    <label>Revenue Forecast Version</label>
    <nameField>
        <label>Revenue Forecast Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Forecast Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>