unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Apex_Job_Id__c</fullName>
    <description>The ID for the Apex job executing the revenue forecast version batch process.</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID for the Apex job executing the revenue forecast version batch process.</inlineHelpText>
    <label>Apex Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>