unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the batch process record used for the revenue forecast version.</description>
    <inlineHelpText>A lookup to the batch process record used for the revenue forecast version.</inlineHelpText>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Revenue Forecast Versions</relationshipLabel>
    <relationshipName>Revenue_Forecast_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>