unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Batch_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Processing_Status__c</fullName>
    <description>The current status of the batch job.</description>
    <inlineHelpText>The current status of the batch job.</inlineHelpText>
    <label>Batch Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>