unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Exclude_Opportunity_Probabilities__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Opportunity_Probabilities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether probabilities were excluded from opportunity revenue forecasts when this revenue forecast version was created.</description>
    <inlineHelpText>Indicates whether probabilities were excluded from opportunity revenue forecasts when this revenue forecast version was created.</inlineHelpText>
    <label>Exclude Probability from Opportunities</label>
    <type>Checkbox</type>
</CustomField>