unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Include_Worst_Case__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Worst_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the opportunity worst case threshold was applied when this revenue forecast version was created.</description>
    <inlineHelpText>Indicates whether the opportunity worst case threshold was applied when this revenue forecast version was created.</inlineHelpText>
    <label>Include Worst Case</label>
    <type>Checkbox</type>
</CustomField>