unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Locked__c.field-meta.xml
<CustomField>
    <fullName>pse__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the revenue forecast version is locked and adjustments can no longer be made.</description>
    <inlineHelpText>If selected, the revenue forecast version is locked and adjustments can no longer be made.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>