unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Opportunity_Expected_Case_Threshold__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity_Expected_Case_Threshold__c</fullName>
    <description>The opportunity expected threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</description>
    <inlineHelpText>The opportunity expected threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</inlineHelpText>
    <label>Opportunity Expected Threshold (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>