unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>Indicates whether this revenue forecast version record relates to the current version of the forecast, or to the previously generated version.</description>
    <inlineHelpText>Indicates whether this revenue forecast version record relates to the current version of the forecast, or to the previously generated version.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <isActive>false</isActive>
                <label>Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>