unpackaged/main/default/objects/pse__Revenue_Forecast_Version__c/fields/pse__Version_Grouping_Primary__c.field-meta.xml
<CustomField>
    <fullName>pse__Version_Grouping_Primary__c</fullName>
    <description>The object that projects and opportunities are grouped under on the Review Forecast Version page.</description>
    <inlineHelpText>The object that projects and opportunities are grouped under on the Review Forecast Version page.</inlineHelpText>
    <label>Object for Version Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pse__Region__c</fullName>
                <default>true</default>
                <label>Region</label>
            </value>
            <value>
                <fullName>pse__Practice__c</fullName>
                <label>Practice</label>
            </value>
            <value>
                <fullName>pse__Group__c</fullName>
                <label>Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>